<resources>
    <string name="app_name">BookList</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Recherche</string>
    <string name="action_scan">Scan</string>
    <string name="title_activity_book_details">Details</string>
    <string name="book_summary">Resumé :</string>
    <string name="read">Lu</string>
    <string name="own">J\'ai</string>
    <string name="navigation_drawer_title">Listes</string>
    <string name="title_activity_book_list">BookList</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="list_wish">Liste de souhait</string>
    <string name="list_library">Bibliothèque</string>
    <string name="list_to_read">A lire</string>
    <string name="list_favorites">Favoris</string>
</resources>
