<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".BookListActivity">
      <item android:id="@+id/action_search"
            android:title="@string/action_search"
            android:showAsAction="collapseActionView|ifRoom"
            android:actionViewClass="android.widget.SearchView"
            android:icon="@android:drawable/ic_menu_search"  />
    <item android:id="@+id/action_scan"
          android:title="@string/action_scan"
          android:showAsAction="ifRoom"
            android:icon="@android:drawable/ic_menu_camera"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          android:showAsAction="never"/>
</menu>