<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="mobop.booklist.app.BookDetailsActivity">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <!-- Image and details of the book -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true">

                <!-- TODO decommenter quand les images marcheront
                <ImageView android:id="@+id/book_detail_image" android:layout_width="wrap_content"
                           android:layout_height="wrap_content"/> -->

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/book_detail_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    <TextView
                            android:id="@+id/book_detail_genre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    <TextView
                            android:id="@+id/book_detail_ratings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    <TextView
                            android:id="@+id/book_detail_pages"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>
            </LinearLayout>

            <!-- Markers -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/read"/>
                <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/own"/>

            </LinearLayout>

            <TextView
                    android:id="@+id/lbl_book_summary"
                    android:text="@string/book_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/book_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/edit_personnal_note"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
